Migrate from embedding  (deprecated) to chat model

--- a/api/config.ini
+++ b/api/config.ini
@@ -3,7 +3,7 @@ src_data_dir = emails
 basic_idx_dir = basicindex
 sent_win_idx_dir = sentenceindex
 auto_mrg_idx_dir = automergeindex
-modelname=text-davinci-003
+modelname=gpt-3.5-turbo
 embedmodel=local:BAAI/bge-small-en-v1.5
 
 [api]
@@ -12,5 +12,5 @@ port=7860
 sslcert=server.cert
 sslkey=server.key
 indextype=basic
-modelname=text-davinci-003
+modelname=gpt-3.5-turbo
 embedmodel=local:BAAI/bge-small-en-v1.5
