Option enabled to run llamacpp inference locally without using openai

--- a/api/config.ini
+++ b/api/config.ini
@@ -12,5 +12,8 @@ port=7860
 sslcert=server.cert
 sslkey=server.key
 indextype=basic
-modelname=gpt-3.5-turbo
+useopenai=false
+loglevel=ERROR
+openai_modelname=gpt-3.5-turbo
+local_modelname=llama-2-13b-chat.Q5_K_M.gguf
 embedmodel=local:BAAI/bge-small-en-v1.5
