Updates to UI/UX - avatar talking head

--- a/.gitignore
+++ b/.gitignore
@@ -1,433 +1,9 @@
-web/node_modules/.bin/mime
-web/node_modules/.bin/mime.cmd
-web/node_modules/.bin/mime.ps1
-web/node_modules/accepts/HISTORY.md
-web/node_modules/accepts/index.js
-web/node_modules/accepts/LICENSE
-web/node_modules/accepts/package.json
-web/node_modules/accepts/README.md
-web/node_modules/array-flatten/array-flatten.js
-web/node_modules/array-flatten/LICENSE
-web/node_modules/array-flatten/package.json
-web/node_modules/array-flatten/README.md
-web/node_modules/body-parser/HISTORY.md
-web/node_modules/body-parser/index.js
-web/node_modules/body-parser/LICENSE
-web/node_modules/body-parser/package.json
-web/node_modules/body-parser/README.md
-web/node_modules/body-parser/SECURITY.md
-web/node_modules/body-parser/lib/read.js
-web/node_modules/body-parser/lib/types/json.js
-web/node_modules/body-parser/lib/types/raw.js
-web/node_modules/body-parser/lib/types/text.js
-web/node_modules/body-parser/lib/types/urlencoded.js
-web/node_modules/bytes/History.md
-web/node_modules/bytes/index.js
-web/node_modules/bytes/LICENSE
-web/node_modules/bytes/package.json
-web/node_modules/bytes/Readme.md
-web/node_modules/call-bind/.eslintignore
-web/node_modules/call-bind/.eslintrc
-web/node_modules/call-bind/.nycrc
-web/node_modules/call-bind/callBound.js
-web/node_modules/call-bind/CHANGELOG.md
-web/node_modules/call-bind/index.js
-web/node_modules/call-bind/LICENSE
-web/node_modules/call-bind/package.json
-web/node_modules/call-bind/README.md
-web/node_modules/call-bind/.github/FUNDING.yml
-web/node_modules/call-bind/test/callBound.js
-web/node_modules/call-bind/test/index.js
-web/node_modules/content-disposition/HISTORY.md
-web/node_modules/content-disposition/index.js
-web/node_modules/content-disposition/LICENSE
-web/node_modules/content-disposition/package.json
-web/node_modules/content-disposition/README.md
-web/node_modules/content-type/HISTORY.md
-web/node_modules/content-type/index.js
-web/node_modules/content-type/LICENSE
-web/node_modules/content-type/package.json
-web/node_modules/content-type/README.md
-web/node_modules/cookie/HISTORY.md
-web/node_modules/cookie/index.js
-web/node_modules/cookie/LICENSE
-web/node_modules/cookie/package.json
-web/node_modules/cookie/README.md
-web/node_modules/cookie/SECURITY.md
-web/node_modules/cookie-signature/.npmignore
-web/node_modules/cookie-signature/History.md
-web/node_modules/cookie-signature/index.js
-web/node_modules/cookie-signature/package.json
-web/node_modules/cookie-signature/Readme.md
-web/node_modules/debug/.coveralls.yml
-web/node_modules/debug/.eslintrc
-web/node_modules/debug/.npmignore
-web/node_modules/debug/.travis.yml
-web/node_modules/debug/CHANGELOG.md
-web/node_modules/debug/component.json
-web/node_modules/debug/karma.conf.js
-web/node_modules/debug/LICENSE
-web/node_modules/debug/Makefile
-web/node_modules/debug/node.js
-web/node_modules/debug/package.json
-web/node_modules/debug/README.md
-web/node_modules/debug/src/browser.js
-web/node_modules/debug/src/debug.js
-web/node_modules/debug/src/index.js
-web/node_modules/debug/src/inspector-log.js
-web/node_modules/debug/src/node.js
-web/node_modules/depd/History.md
-web/node_modules/depd/index.js
-web/node_modules/depd/LICENSE
-web/node_modules/depd/package.json
-web/node_modules/depd/Readme.md
-web/node_modules/depd/lib/browser/index.js
-web/node_modules/destroy/index.js
-web/node_modules/destroy/LICENSE
-web/node_modules/destroy/package.json
-web/node_modules/destroy/README.md
-web/node_modules/ee-first/index.js
-web/node_modules/ee-first/LICENSE
-web/node_modules/ee-first/package.json
-web/node_modules/ee-first/README.md
-web/node_modules/encodeurl/HISTORY.md
-web/node_modules/encodeurl/index.js
-web/node_modules/encodeurl/LICENSE
-web/node_modules/encodeurl/package.json
-web/node_modules/encodeurl/README.md
-web/node_modules/escape-html/index.js
-web/node_modules/escape-html/LICENSE
-web/node_modules/escape-html/package.json
-web/node_modules/escape-html/Readme.md
-web/node_modules/etag/HISTORY.md
-web/node_modules/etag/index.js
-web/node_modules/etag/LICENSE
-web/node_modules/etag/package.json
-web/node_modules/etag/README.md
-web/node_modules/express/History.md
-web/node_modules/express/index.js
-web/node_modules/express/LICENSE
-web/node_modules/express/package.json
-web/node_modules/express/Readme.md
-web/node_modules/express/lib/application.js
-web/node_modules/express/lib/express.js
-web/node_modules/express/lib/request.js
-web/node_modules/express/lib/response.js
-web/node_modules/express/lib/utils.js
-web/node_modules/express/lib/view.js
-web/node_modules/express/lib/middleware/init.js
-web/node_modules/express/lib/middleware/query.js
-web/node_modules/express/lib/router/index.js
-web/node_modules/express/lib/router/layer.js
-web/node_modules/express/lib/router/route.js
-web/node_modules/finalhandler/HISTORY.md
-web/node_modules/finalhandler/index.js
-web/node_modules/finalhandler/LICENSE
-web/node_modules/finalhandler/package.json
-web/node_modules/finalhandler/README.md
-web/node_modules/finalhandler/SECURITY.md
-web/node_modules/forwarded/HISTORY.md
-web/node_modules/forwarded/index.js
-web/node_modules/forwarded/LICENSE
-web/node_modules/forwarded/package.json
-web/node_modules/forwarded/README.md
-web/node_modules/fresh/HISTORY.md
-web/node_modules/fresh/index.js
-web/node_modules/fresh/LICENSE
-web/node_modules/fresh/package.json
-web/node_modules/fresh/README.md
-web/node_modules/function-bind/.editorconfig
-web/node_modules/function-bind/.eslintrc
-web/node_modules/function-bind/.jscs.json
-web/node_modules/function-bind/.npmignore
-web/node_modules/function-bind/.travis.yml
-web/node_modules/function-bind/implementation.js
-web/node_modules/function-bind/index.js
-web/node_modules/function-bind/LICENSE
-web/node_modules/function-bind/package.json
-web/node_modules/function-bind/README.md
-web/node_modules/function-bind/test/.eslintrc
-web/node_modules/function-bind/test/index.js
-web/node_modules/get-intrinsic/.eslintrc
-web/node_modules/get-intrinsic/.nycrc
-web/node_modules/get-intrinsic/CHANGELOG.md
-web/node_modules/get-intrinsic/index.js
-web/node_modules/get-intrinsic/LICENSE
-web/node_modules/get-intrinsic/package.json
-web/node_modules/get-intrinsic/README.md
-web/node_modules/get-intrinsic/.github/FUNDING.yml
-web/node_modules/get-intrinsic/test/GetIntrinsic.js
-web/node_modules/has/LICENSE-MIT
-web/node_modules/has/package.json
-web/node_modules/has/README.md
-web/node_modules/has/src/index.js
-web/node_modules/has/test/index.js
-web/node_modules/has-proto/.eslintrc
-web/node_modules/has-proto/CHANGELOG.md
-web/node_modules/has-proto/index.js
-web/node_modules/has-proto/LICENSE
-web/node_modules/has-proto/package.json
-web/node_modules/has-proto/README.md
-web/node_modules/has-proto/.github/FUNDING.yml
-web/node_modules/has-proto/test/index.js
-web/node_modules/has-symbols/.eslintrc
-web/node_modules/has-symbols/.nycrc
-web/node_modules/has-symbols/CHANGELOG.md
-web/node_modules/has-symbols/index.js
-web/node_modules/has-symbols/LICENSE
-web/node_modules/has-symbols/package.json
-web/node_modules/has-symbols/README.md
-web/node_modules/has-symbols/shams.js
-web/node_modules/has-symbols/.github/FUNDING.yml
-web/node_modules/has-symbols/test/index.js
-web/node_modules/has-symbols/test/tests.js
-web/node_modules/has-symbols/test/shams/core-js.js
-web/node_modules/has-symbols/test/shams/get-own-property-symbols.js
-web/node_modules/http-errors/HISTORY.md
-web/node_modules/http-errors/index.js
-web/node_modules/http-errors/LICENSE
-web/node_modules/http-errors/package.json
-web/node_modules/http-errors/README.md
-web/node_modules/iconv-lite/Changelog.md
-web/node_modules/iconv-lite/LICENSE
-web/node_modules/iconv-lite/package.json
-web/node_modules/iconv-lite/README.md
-web/node_modules/iconv-lite/encodings/dbcs-codec.js
-web/node_modules/iconv-lite/encodings/dbcs-data.js
-web/node_modules/iconv-lite/encodings/index.js
-web/node_modules/iconv-lite/encodings/internal.js
-web/node_modules/iconv-lite/encodings/sbcs-codec.js
-web/node_modules/iconv-lite/encodings/sbcs-data-generated.js
-web/node_modules/iconv-lite/encodings/sbcs-data.js
-web/node_modules/iconv-lite/encodings/utf7.js
-web/node_modules/iconv-lite/encodings/utf16.js
-web/node_modules/iconv-lite/encodings/tables/big5-added.json
-web/node_modules/iconv-lite/encodings/tables/cp936.json
-web/node_modules/iconv-lite/encodings/tables/cp949.json
-web/node_modules/iconv-lite/encodings/tables/cp950.json
-web/node_modules/iconv-lite/encodings/tables/eucjp.json
-web/node_modules/iconv-lite/encodings/tables/gb18030-ranges.json
-web/node_modules/iconv-lite/encodings/tables/gbk-added.json
-web/node_modules/iconv-lite/encodings/tables/shiftjis.json
-web/node_modules/iconv-lite/lib/bom-handling.js
-web/node_modules/iconv-lite/lib/extend-node.js
-web/node_modules/iconv-lite/lib/index.d.ts
-web/node_modules/iconv-lite/lib/index.js
-web/node_modules/iconv-lite/lib/streams.js
-web/node_modules/inherits/inherits_browser.js
-web/node_modules/inherits/inherits.js
-web/node_modules/inherits/LICENSE
-web/node_modules/inherits/package.json
-web/node_modules/inherits/README.md
-web/node_modules/ipaddr.js/ipaddr.min.js
-web/node_modules/ipaddr.js/LICENSE
-web/node_modules/ipaddr.js/package.json
-web/node_modules/ipaddr.js/README.md
-web/node_modules/ipaddr.js/lib/ipaddr.js
-web/node_modules/ipaddr.js/lib/ipaddr.js.d.ts
-web/node_modules/media-typer/HISTORY.md
-web/node_modules/media-typer/index.js
-web/node_modules/media-typer/LICENSE
-web/node_modules/media-typer/package.json
-web/node_modules/media-typer/README.md
-web/node_modules/merge-descriptors/HISTORY.md
-web/node_modules/merge-descriptors/index.js
-web/node_modules/merge-descriptors/LICENSE
-web/node_modules/merge-descriptors/package.json
-web/node_modules/merge-descriptors/README.md
-web/node_modules/methods/HISTORY.md
-web/node_modules/methods/index.js
-web/node_modules/methods/LICENSE
-web/node_modules/methods/package.json
-web/node_modules/methods/README.md
-web/node_modules/mime/.npmignore
-web/node_modules/mime/CHANGELOG.md
-web/node_modules/mime/cli.js
-web/node_modules/mime/LICENSE
-web/node_modules/mime/mime.js
-web/node_modules/mime/package.json
-web/node_modules/mime/README.md
-web/node_modules/mime/types.json
-web/node_modules/mime/src/build.js
-web/node_modules/mime/src/test.js
-web/node_modules/mime-db/db.json
-web/node_modules/mime-db/HISTORY.md
-web/node_modules/mime-db/index.js
-web/node_modules/mime-db/LICENSE
-web/node_modules/mime-db/package.json
-web/node_modules/mime-db/README.md
-web/node_modules/mime-types/HISTORY.md
-web/node_modules/mime-types/index.js
-web/node_modules/mime-types/LICENSE
-web/node_modules/mime-types/package.json
-web/node_modules/mime-types/README.md
-web/node_modules/ms/index.js
-web/node_modules/ms/license.md
-web/node_modules/ms/package.json
-web/node_modules/ms/readme.md
-web/node_modules/negotiator/HISTORY.md
-web/node_modules/negotiator/index.js
-web/node_modules/negotiator/LICENSE
-web/node_modules/negotiator/package.json
-web/node_modules/negotiator/README.md
-web/node_modules/negotiator/lib/charset.js
-web/node_modules/negotiator/lib/encoding.js
-web/node_modules/negotiator/lib/language.js
-web/node_modules/negotiator/lib/mediaType.js
-web/node_modules/object-inspect/.eslintrc
-web/node_modules/object-inspect/.nycrc
-web/node_modules/object-inspect/CHANGELOG.md
-web/node_modules/object-inspect/index.js
-web/node_modules/object-inspect/LICENSE
-web/node_modules/object-inspect/package-support.json
-web/node_modules/object-inspect/package.json
-web/node_modules/object-inspect/readme.markdown
-web/node_modules/object-inspect/test-core-js.js
-web/node_modules/object-inspect/util.inspect.js
-web/node_modules/object-inspect/.github/FUNDING.yml
-web/node_modules/object-inspect/example/all.js
-web/node_modules/object-inspect/example/circular.js
-web/node_modules/object-inspect/example/fn.js
-web/node_modules/object-inspect/example/inspect.js
-web/node_modules/object-inspect/test/bigint.js
-web/node_modules/object-inspect/test/circular.js
-web/node_modules/object-inspect/test/deep.js
-web/node_modules/object-inspect/test/element.js
-web/node_modules/object-inspect/test/err.js
-web/node_modules/object-inspect/test/fakes.js
-web/node_modules/object-inspect/test/fn.js
-web/node_modules/object-inspect/test/has.js
-web/node_modules/object-inspect/test/holes.js
-web/node_modules/object-inspect/test/indent-option.js
-web/node_modules/object-inspect/test/inspect.js
-web/node_modules/object-inspect/test/lowbyte.js
-web/node_modules/object-inspect/test/number.js
-web/node_modules/object-inspect/test/quoteStyle.js
-web/node_modules/object-inspect/test/toStringTag.js
-web/node_modules/object-inspect/test/undef.js
-web/node_modules/object-inspect/test/values.js
-web/node_modules/object-inspect/test/browser/dom.js
-web/node_modules/on-finished/HISTORY.md
-web/node_modules/on-finished/index.js
-web/node_modules/on-finished/LICENSE
-web/node_modules/on-finished/package.json
-web/node_modules/on-finished/README.md
-web/node_modules/parseurl/HISTORY.md
-web/node_modules/parseurl/index.js
-web/node_modules/parseurl/LICENSE
-web/node_modules/parseurl/package.json
-web/node_modules/parseurl/README.md
-web/node_modules/path-to-regexp/History.md
-web/node_modules/path-to-regexp/index.js
-web/node_modules/path-to-regexp/LICENSE
-web/node_modules/path-to-regexp/package.json
-web/node_modules/path-to-regexp/Readme.md
-web/node_modules/proxy-addr/HISTORY.md
-web/node_modules/proxy-addr/index.js
-web/node_modules/proxy-addr/LICENSE
-web/node_modules/proxy-addr/package.json
-web/node_modules/proxy-addr/README.md
-web/node_modules/qs/.editorconfig
-web/node_modules/qs/.eslintrc
-web/node_modules/qs/.nycrc
-web/node_modules/qs/CHANGELOG.md
-web/node_modules/qs/LICENSE.md
-web/node_modules/qs/package.json
-web/node_modules/qs/README.md
-web/node_modules/qs/.github/FUNDING.yml
-web/node_modules/qs/dist/qs.js
-web/node_modules/qs/lib/formats.js
-web/node_modules/qs/lib/index.js
-web/node_modules/qs/lib/parse.js
-web/node_modules/qs/lib/stringify.js
-web/node_modules/qs/lib/utils.js
-web/node_modules/qs/test/parse.js
-web/node_modules/qs/test/stringify.js
-web/node_modules/qs/test/utils.js
-web/node_modules/range-parser/HISTORY.md
-web/node_modules/range-parser/index.js
-web/node_modules/range-parser/LICENSE
-web/node_modules/range-parser/package.json
-web/node_modules/range-parser/README.md
-web/node_modules/raw-body/HISTORY.md
-web/node_modules/raw-body/index.d.ts
-web/node_modules/raw-body/index.js
-web/node_modules/raw-body/LICENSE
-web/node_modules/raw-body/package.json
-web/node_modules/raw-body/README.md
-web/node_modules/raw-body/SECURITY.md
-web/node_modules/safe-buffer/index.d.ts
-web/node_modules/safe-buffer/index.js
-web/node_modules/safe-buffer/LICENSE
-web/node_modules/safe-buffer/package.json
-web/node_modules/safe-buffer/README.md
-web/node_modules/safer-buffer/dangerous.js
-web/node_modules/safer-buffer/LICENSE
-web/node_modules/safer-buffer/package.json
-web/node_modules/safer-buffer/Porting-Buffer.md
-web/node_modules/safer-buffer/Readme.md
-web/node_modules/safer-buffer/safer.js
-web/node_modules/safer-buffer/tests.js
-web/node_modules/send/HISTORY.md
-web/node_modules/send/index.js
-web/node_modules/send/LICENSE
-web/node_modules/send/package.json
-web/node_modules/send/README.md
-web/node_modules/send/SECURITY.md
-web/node_modules/send/node_modules/ms/index.js
-web/node_modules/send/node_modules/ms/license.md
-web/node_modules/send/node_modules/ms/package.json
-web/node_modules/send/node_modules/ms/readme.md
-web/node_modules/serve-static/HISTORY.md
-web/node_modules/serve-static/index.js
-web/node_modules/serve-static/LICENSE
-web/node_modules/serve-static/package.json
-web/node_modules/serve-static/README.md
-web/node_modules/setprototypeof/index.d.ts
-web/node_modules/setprototypeof/index.js
-web/node_modules/setprototypeof/LICENSE
-web/node_modules/setprototypeof/package.json
-web/node_modules/setprototypeof/README.md
-web/node_modules/setprototypeof/test/index.js
-web/node_modules/side-channel/.eslintignore
-web/node_modules/side-channel/.eslintrc
-web/node_modules/side-channel/.nycrc
-web/node_modules/side-channel/CHANGELOG.md
-web/node_modules/side-channel/index.js
-web/node_modules/side-channel/LICENSE
-web/node_modules/side-channel/package.json
-web/node_modules/side-channel/README.md
-web/node_modules/side-channel/.github/FUNDING.yml
-web/node_modules/side-channel/test/index.js
-web/node_modules/statuses/codes.json
-web/node_modules/statuses/HISTORY.md
-web/node_modules/statuses/index.js
-web/node_modules/statuses/LICENSE
-web/node_modules/statuses/package.json
-web/node_modules/statuses/README.md
-web/node_modules/toidentifier/HISTORY.md
-web/node_modules/toidentifier/index.js
-web/node_modules/toidentifier/LICENSE
-web/node_modules/toidentifier/package.json
-web/node_modules/toidentifier/README.md
-web/node_modules/type-is/HISTORY.md
-web/node_modules/type-is/index.js
-web/node_modules/type-is/LICENSE
-web/node_modules/type-is/package.json
-web/node_modules/type-is/README.md
-web/node_modules/unpipe/HISTORY.md
-web/node_modules/unpipe/index.js
-web/node_modules/unpipe/LICENSE
-web/node_modules/unpipe/package.json
-web/node_modules/unpipe/README.md
-web/node_modules/utils-merge/.npmignore
-web/node_modules/utils-merge/index.js
-web/node_modules/utils-merge/LICENSE
-web/node_modules/utils-merge/package.json
-web/node_modules/utils-merge/README.md
-web/node_modules/vary/HISTORY.md
-web/node_modules/vary/index.js
-web/node_modules/vary/LICENSE
-web/node_modules/vary/package.json
-web/node_modules/vary/README.md
-api/__pycache__/utils.cpython-310.pyc
+**/__pycache__/
+**/node_modules/
+**/models/
+**/checkpoints/
+api/data/
+api/index/
+api/temp/result.avi
+web/public/video/output/
+web/public/audio/output/
