--- a/api/config.ini
+++ b/api/config.ini
@@ -1,19 +1,22 @@
 [index]
-src_data_dir = emails
-basic_idx_dir = basicindex
-sent_win_idx_dir = sentenceindex
-auto_mrg_idx_dir = automergeindex
+src_data_dir = data/kwaai
+basic_idx_dir = index/kwaai/basicindex
+sent_win_idx_dir = index/kwaai/sentenceindex
+auto_mrg_idx_dir = index/kwaai/automergeindex
+useopenai=false
 modelname=gpt-3.5-turbo
-embedmodel=local:BAAI/bge-small-en-v1.5
+local_modelname=openchat_3.5.Q4_K_M.gguf
+embedmodel=local:BAAI/bge-large-en-v1.5
 
 [api]
 host=0.0.0.0
 port=7860
 sslcert=server.cert
 sslkey=server.key
-indextype=basic
+indextype=automerge
 useopenai=false
+ttsengine=coqui
 loglevel=ERROR
 openai_modelname=gpt-3.5-turbo
-local_modelname=llama-2-13b-chat.Q5_K_M.gguf
-embedmodel=local:BAAI/bge-small-en-v1.5
+local_modelname=openchat_3.5.Q4_K_M.gguf
+embedmodel=local:BAAI/bge-large-en-v1.5
