--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -3,6 +3,17 @@ langchain==0.0.344
 llama_index==0.9.10
 jinja2==3.1.2
 markupsafe==2.0.1
+librosa==0.10.0
+numpy
+numba==0.59.0
 torch
 transformers
 llama-cpp-python
+TTS
+simpleaudio
+sentence-transformers
+docx2txt
+pypdf
+pyttsx3
+opencv-python
+gtts
