--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -7,3 +7,4 @@ RUN DEBIAN_FRONTEND=noninteractive \
   && rm -rf /var/lib/apt/lists/*
 RUN useradd -ms /bin/bash apprunner
 USER apprunner
+git clone https://github.com/ShadNygren/PAIAssistant.git
