--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -3,7 +3,7 @@ RUN echo 'APT::Install-Suggests "0";' >> /etc/apt/apt.conf.d/00-docker
 RUN echo 'APT::Install-Recommends "0";' >> /etc/apt/apt.conf.d/00-docker
 RUN DEBIAN_FRONTEND=noninteractive \
   apt-get update \
-  && apt-get install -y python3 \
+  && apt-get install -y python3.10 git \
   && rm -rf /var/lib/apt/lists/*
 RUN useradd -ms /bin/bash apprunner
 USER apprunner
