--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,6 +1,6 @@
 gradio==4.7.1
-langchain==0.0.344
-llama_index==0.9.10
+langchain
+llama_index
 jinja2==3.1.2
 markupsafe==2.0.1
 torch
@@ -14,3 +14,5 @@ pypdf
 pyttsx3
 gtts
 llama-index-readers-pdf-table
+llama-index-llms-langchain
+llama-index-embeddings-huggingface
