fixed issue with pip dependencies

--- a/DockerFile
+++ b/DockerFile
@@ -37,7 +37,7 @@ COPY . /pai
 WORKDIR /pai/web
 RUN npm install
 WORKDIR /pai/api
-RUN pip3 install -r requirements.txt
+RUN pip3 install --no-cache-dir --no-deps -r requirements.txt
 RUN CMAKE_ARGS="-DGGML_CUDA=on" pip install llama-cpp-python --upgrade --force-reinstall --no-cache-dir
 RUN pip3 install TTS simpleaudio gtts
 WORKDIR /pai
