Updated openai api to talk to kwaai net openai complaint api endpoint. Connected agent to test with kwaainet.

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ web/public/video/output/*
 !web/public/video/output/.gitkeep
 web/public/audio/output/*
 !web/public/audio/output/.gitkeep
+**/espeak-ng/
