--- a/DockerFile
+++ b/DockerFile
@@ -1,56 +1,56 @@
 FROM nvidia/cuda:12.6.1-devel-ubuntu22.04
 
-# Set the working directory inside the container
+# Set the working directory
 WORKDIR /pai
 
+# Install dependencies in a single layer to optimize caching
+RUN apt update && apt upgrade -y && \
+    apt-get install -y \
+        net-tools \
+        software-properties-common \
+        python3.10 \
+        python-is-python3 \
+        python3-pip \
+        python3.10-distutils \
+        npm \
+        libsndfile1 \
+        libasound2-dev \
+        ffmpeg \
+        autotools-dev \
+        automake \
+        libtool \
+        curl \
+        git && \
+    add-apt-repository ppa:deadsnakes/ppa -y && \
+    update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.10 1 && \
+    curl https://bootstrap.pypa.io/get-pip.py | python && \
+    apt-get clean
 
-RUN apt update && apt upgrade -y
-RUN apt-get update
-RUN apt install net-tools -y
-RUN apt install software-properties-common -y
-RUN add-apt-repository ppa:deadsnakes/ppa -y
-RUN apt update
-RUN apt install python3.10 -y
-RUN apt install python-is-python3 -y
-RUN update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.10 1
-RUN update-alternatives --config python3
-RUN curl https://bootstrap.pypa.io/get-pip.py | python
-RUN apt install python3-pip -y
-RUN apt install python3.10-distutils -y
-RUN apt install npm -y
-RUN apt-get install libsndfile1 -y 
-RUN apt install libasound2-dev -y
-RUN apt install ffmpeg -y
-RUN apt-get install autotools-dev -y
-RUN apt-get install automake -y
-RUN apt-get install libtool -y
-RUN git clone https://github.com/espeak-ng/espeak-ng.git
+# Clone and build eSpeak-NG separately
+RUN git clone https://github.com/espeak-ng/espeak-ng.git /pai/espeak-ng
 WORKDIR /pai/espeak-ng
-RUN ./autogen.sh
-RUN ./configure --without-pulseaudio
-RUN make
-RUN make install
+RUN ./autogen.sh && ./configure --without-pulseaudio && make && make install
 
-# Copy the current directory contents into the container at /pai
-COPY . /pai
-
+# Copy only package files first to leverage Docker's cache for dependencies
 WORKDIR /pai/web
+COPY web/package.json web/package-lock.json ./
 RUN npm install
+
 WORKDIR /pai/api
+COPY api/requirements.txt ./
 RUN pip3 install -r requirements.txt
+
 RUN CMAKE_ARGS="-DGGML_CUDA=on" pip install llama-cpp-python --upgrade --force-reinstall --no-cache-dir
-# RUN pip3 install TTS
-RUN git clone https://github.com/coqui-ai/TTS /TTS \
-    && cd /TTS \
-    && sed -i 's/gruut\[de,es,fr\]==2.2.3/gruut\[de,es,fr\]==2.4.0/' requirements.txt \
-    && pip install -r requirements.txt \
-    && pip install -e .
-RUN pip3 install simpleaudio
-RUN pip3 install gtts
-WORKDIR /pai
+RUN pip install --ignore-installed --no-cache-dir -U blinker
+RUN pip3 install TTS
+RUN pip3 install simpleaudio gtts fastapi==0.112.0
+
+ENV OPENAI_API_KEY=${OPENAI_API_KEY:-"DUMMY-KEY"}
+
+# Now copy the rest of the project files
+COPY . /pai
 
 # Expose port 4000 for the application
 EXPOSE 4000
 
-# Correctly use the --prefix option by separating it and its argument
 CMD ["npm", "start", "--prefix", "/pai/web"]
