--- a/api/config.ini
+++ b/api/config.ini
@@ -1,7 +1,7 @@
 [index]
 src_data_dir = data/kwaai
-basic_idx_dir = index/kwaai/basicindex
-sent_win_idx_dir = index/kwaai/sentenceindex
+basic_idx_dir =
+sent_win_idx_dir =
 auto_mrg_idx_dir = index/kwaai/automergeindex
 useopenai=false
 modelname=gpt-3.5-turbo
@@ -14,9 +14,35 @@ port=7860
 sslcert=server.cert
 sslkey=server.key
 indextype=automerge
-useopenai=false
-ttsengine=coqui
+useopenai=true
+ttsengine=gtts
 loglevel=ERROR
-openai_modelname=gpt-3.5-turbo
+openai_api_base=https://kwaainet-xk14r7ayerscr.cpln.app/v1
+openai_modelname=deepseek-ai/DeepSeek-R1-Distill-Llama-8B
 local_modelname=openchat_3.5.Q4_K_M.gguf
 embedmodel=local:BAAI/bge-large-en-v1.5
+
+[Prompt]
+qa_prompt_tmpl = 
+    <｜begin▁of▁sentence｜>
+    You are an assistant named Lumi. You assist with document search.
+    Today is {current_date}
+    Use the following pieces of context to answer the question at the end. Do not answer questions outside the given context. Context information is below
+    ----------------------
+    {context_str}
+    ----------------------
+    <｜User｜>question: {query_str}
+stop_words=<｜end▁of▁sentence｜>    
+# Alternate llama 3 stop word
+#   <|end_of_turn|>
+
+# Alternative prompt (Maggie for kwaai). Llama 3 template.
+# alt_prompt_tmpl = 
+#    GPT4 User: You are an assistant named Maggie. You assist with any questions regarding the organization kwaai.
+#    Today is {current_date}
+#    Use the following pieces of context to answer the question at the end. Do not answer questions outside the given context. Context information is below
+#    ----------------------
+#    {context_str}
+#    ----------------------
+#    question: {query_str}
+#    <|end_of_turn|>GPT4 Assistant:
