--- a/.dockerignore
+++ b/.dockerignore
@@ -14,3 +14,4 @@ web/public/video/output/*
 !web/public/video/output/.gitkeep
 web/public/audio/output/*
 !web/public/audio/output/.gitkeep
+**/espeak-ng/
